# ZeroToProd

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20230320014838_create_subscriptions_table.sql  20230320034219_create_subscriptions_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  dom2.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  newsletters.rs  subscriber_email.rs  subscriber_name.rs
src/home/: home.html  mod.rs
src/login/: get.rs  login.html  mod.rs  post.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
