[package]
name = "ZeroToProd"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = "0.16"
secrecy = { version = "0.8", features = ["serde"] }
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
#env_logger = "0.9"
#log = "0.4"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"



[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
claims = "0.7"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features =[
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

